# binary-text-classifier

./: README.md  pyproject.toml
binary_text_classifier/: Transformer_ham_spam_PyTorch.ipynb  contractions_mapping.py  ham_spam_classifier.ipynb  text_processing_functions.py  transformer_ham_spam.ipynb
tests/: test_text_processing.py
