[tool.poetry]
name = "binary-text-classifier"
version = "0.1.0"
description = ""
authors = ["Gareth Smith <garethsmithuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
urlextract = "^1.8.0"
tldextract = "^5.1.1"
pyspellchecker = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
